feat:增加一些自定义控件 以及一些公用方法  之前KEY没配置，长期未更新，具体功能遗忘 1.三角的背景view